issue-44 ldap config get and update api definition
